crux-mir/test/symb_eval/alloc/uninit_read.good
test uninit_read/3a1fbbbh::crux_test[0]: FAILED

failures:

---- uninit_read/3a1fbbbh::crux_test[0] counterexamples ----
Failure for test/symb_eval/alloc/uninit_read.rs:9:9: error: in uninit_read/3a1fbbbh::crux_test[0]
Attempted to read uninitialized vector index
Failure for test/symb_eval/alloc/uninit_read.rs:9:9: error: in uninit_read/3a1fbbbh::crux_test[0]
attemted to read empty mux tree

[Crux] Overall status: Invalid.
